syntax = "proto3";

option go_package = "./transaction_items";

message TransactionItems {
    string transaction_id = 1;
    int64 item_id = 2;
    int32 quantity = 3;
    double unit_price = 4;
    double subtotal = 5;
    string created_at = 6; // ISO 8601 format
}

message TransactionItemsBatch {
    int32 task_type = 1;
    repeated TransactionItems transaction_items = 2;
}


